--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
+crispy-bootstrap5==0.7
 Django==3.2
 django-allauth==0.41.0
 django-countries==7.5.1
+django-crispy-forms==2.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 python3-openid==3.2.0
