--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ Django==3.2
 django-allauth==0.41.0
 django-countries==7.5.1
 django-crispy-forms==2.0
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==9.4.0
 python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
